--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
   crates-io:
     name: Publish to crates.io
     runs-on: ubuntu-latest
+    continue-on-error: true  # Don't fail if already published
     steps:
       - uses: actions/checkout@v4
       
