Fix sdist: let maturin include README from workspace root

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,9 +78,7 @@ jobs:
         run: pip install maturin
       
       - name: Build sdist
-        run: |
-          cp README.md python/README.md
-          cd python && maturin sdist
+        run: cd python && maturin sdist
       
       - name: Upload sdist
         uses: actions/upload-artifact@v4
