--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "maturin"
 
 [project]
 name = "safe-unzip"
-version = "0.1.1"
+version = "0.1.2"
 description = "Secure zip extraction. Prevents Zip Slip and Zip Bombs."
-# readme included from workspace root by maturin
+readme = "../README.md"
 license = {text = "MIT OR Apache-2.0"}
 requires-python = ">=3.8"
 authors = [
